# tidepool-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: PYTHON_CLIENT.md
tests/: test_client_async.py  test_client_namespace.py  test_client_sync.py  test_parsing.py  test_validation.py
tidepool/: __init__.py  client.py  errors.py  types.py
