[project]
name = "tidepool"
version = "0.1.0"
description = "Python client for Tidepool vector database"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
  {name = "Milan Nair"}
]

[project.urls]
Homepage = "https://github.com/milannair/tidepool"
Repository = "https://github.com/milannair/tidepool-clients"
Documentation = "https://github.com/milannair/tidepool-clients/tree/main/tidepool-python"
dependencies = [
  "httpx>=0.24.0",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
keywords = ["vector", "search", "ann", "tidepool", "embeddings"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["tidepool*"]
